--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "dependencies": {
     "amqplib": "^0.6.0",
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "csv-parse": "^4.14.1",
+    "csv-parser": "^2.3.3",
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
